various style fixes
remove scrollbar from tickers, prevent overlapping elements

--- a/public/css/video/style.css
+++ b/public/css/video/style.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-wrap: wrap;
     align-self: stretch;
+    height: 80vh;
 }
 
 .video-container {
@@ -32,17 +33,26 @@
 #live-chat {
     flex: 1 1 1000px;
     margin: 2px;
+    /* also has conditional styles depending on width */
 }
 
 #live-chat-messages {
+    height: calc(100% - 32px);
+    width: 100%;
     overflow-y: scroll;
     word-break: break-word;
-    height: 100%;
+}
+
+.live-chat-ticker-container {
+    width: 100%;
+    height: 32px;
+    overflow: hidden;
 }
 
 #live-chat-tickers {
     overflow-x: scroll;
     white-space: nowrap;
+    height: 200%; /* avoid showing scroll bar when no content */
 }
 
 .chat-message {
@@ -149,14 +159,14 @@
 
 .chat-ticker-wrapper {
     display: inline-block;
-    margin-right: 4px;
-    padding: 1px;
+    padding-right: 4px;
+    padding-top: 2px;
+    padding-bottom: 2px;
 }
 
 .chat-ticker {
     padding: 4px;
     border-radius: 999px;
-    /* TODO */
 }
 
 .chat-ticker.chat-ticker-message-paid {
@@ -171,24 +181,24 @@
 
 @media only screen and (max-width: 1000px) {
     .video-container {
-        height: 40vh;
+        height: 50%;
     }
 
     #live-chat {
-        height: 50vh;
-        max-width: 100%;
+        height: 50%;
+        width: 100%;
     }
 }
 
 @media only screen and (min-width: 1000px) {
     .video-container {
-        height: 80vh;
-        max-width: 70vw;
+        height: 100%;
+        max-width: 70%;
     }
 
     #live-chat {
-        height: 80vh;
-        max-width: 25vw;
+        height: 100%;
+        max-width: 25%;
     }
 }
 
